# Rigibra

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt  func_setReleaseTag.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  Rigibra  Rigibra.hpp  _.hpp  func.hpp  type.hpp
src/: CMakeLists.txt  Rigibra.cpp  _.cpp
test/: CMakeLists.txt  _.cpp  test_Version.cpp  test_cmake.cpp  test_func.cpp  test_type.cpp
theory/: Transforms.lyx
